# online-synth

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Makefile  README.md  biome.json  bun.lockb  index.html  package.json  postcss.config.cjs  tsconfig.json  vercel.sh  vite.config.ts
src/: App.svelte  app.d.ts  global.ts  lib.rs  main.ts
src-rust/fft/: Cargo.toml
src-rust/fft/src/: lib.rs
src-rust/loaders/: Cargo.toml
src-rust/plot/: Cargo.toml
src-rust/plot/src/: chart_2d.rs  chart_3d.rs  lib.rs
src-rust/synth/: Cargo.toml
src-rust/synth/src/: lib.rs  wavetable.rs
src-rust/synth/src/wavetable/: basic_shapes.rs  sine_saw.rs  sine_square.rs
src/assets/wavetables/: tablemap.yaml
src/html/: noscritpt.html
src/lib/: App.svelte  Piano.svelte  buffer-utils.test.ts  buffer-utils.ts  buffer.ts  generator.ts  global.ts  note-utils.test.ts  tune.ts
src/lib/components/: Piano.svelte  Synth.svelte
src/lib/components/common/: DownloadBtn.svelte  ImportBtn.svelte  Modal.svelte
src/lib/components/settings/: Button.svelte  Modal.svelte
src/lib/components/synth/: Synth.svelte  synth.ts
src/lib/components/wavetable/: Modal.svelte  View2d.svelte  View3d.svelte  ViewSpectral.svelte  WavetableView.svelte  basic-shapes.ts  fetch-tables.ts  wavetable.ts
src/lib/components/wavetable/modal/: HeartBtn.svelte  Modal.svelte
src/lib/stores/: audio.ts  constants.ts  global.ts  tuning.ts
src/lib/utils/: buffer.test.ts  buffer.ts  math.test.ts  math.ts  note.test.ts  note.ts
src/styles/: app.css  button.css  extra.css  index.css  noscript.css
src/wasm/: buffer.rs  mod.rs  plot.rs  wavetable.rs
src/wasm/fft/: analyze.rs  mod.rs
src/wasm/io/: encoder.rs  io.test.ts  mod.rs
src/wasm/io/decoders/: wave.rs
src/wasm/plot/: chart_2d.rs  chart_3d.rs  colors.rs  mod.rs
src/wasm/synth/: generators.rs  mod.rs  prerender.ts  wavetables.rs
src/wasm/utils/: downsample.rs  logger.rs  mod.rs
src/wasm/wavetable/: basic_shapes.rs  mod.rs  sine_saw.rs  sine_square.rs
