[package]
name = "wavetable-synth"
description = "Rust Logic for an online wavetable synthesizer."
version = "0.1.3"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
plotters = "0.3.5"
plotters-canvas = "^0.3.0"
rustfft = "6.1.0"
wasm-bindgen = "=0.2.90"
web-sys = { version = "0.3.39", features = ["console","HtmlCanvasElement"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = "z"
panic = "abort"
